minor css fix - align-items present twice - undeeded.

--- a/react-vite/src/components/ChannelPopupModal/ChannelPopup.css
+++ b/react-vite/src/components/ChannelPopupModal/ChannelPopup.css
@@ -29,7 +29,6 @@
     margin: 10px 20px;
     align-items: center;
     padding: 0 5px;
-    align-items: center;
 }
 
 .channel-popup-member:hover {
